[package]
name = "nnn"
version = "1.1.0"
edition = "2021"
authors = ["Victor LEFEBVRE <contact@vic1707.xyz>"]
description = "Generate your newtypes from a single macro."
documentation = "https://docs.rs/nnn"
homepage = "https://github.com/vic1707/nnn"
license = "WTFPL"
readme = "README.md"
repository = "https://github.com/vic1707/nnn"
categories = ["data-structures", "rust-patterns"]
keywords = ["newtype", "validation", "sanitization", "derive", "invariant"]
rust-version = "1.82.0"

[workspace]
resolver = "2"
members = ["nnn-macros"]

[dependencies]
nnn-macros = { version = "1.1.0", path = "./nnn-macros" }

[features]
default = []
regex_validation = ["nnn-macros/regex_validation"]

[dev-dependencies]
paste = "1.0.15"
regex = "1.11.1"
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
trybuild = "1.0.104"
