[package]
name = "nnn-macros"
version = "1.0.0"
edition = "2021"
authors = ["Victor LEFEBVRE <contact@vic1707.xyz>"]
description = "Generate your newtypes from a single macro."
documentation = "https://docs.rs/nnn"
homepage = "https://github.com/vic1707/nnn"
license = "WTFPL"
readme = "README.md"
repository = "https://github.com/vic1707/nnn"
categories = ["data-structures", "rust-patterns"]
keywords = ["newtype", "validation", "sanitization", "derive", "invariant"]
rust-version = "1.82.0"

[lib]
proc-macro = true

[features]
default = []
regex_validation = ["dep:regex"]

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
regex = { version = "1.11.1", optional = true }
syn = { version = "2.0.99", features = ["full"] }
